--- a/templates/index.html
+++ b/templates/index.html
@@ -470,5 +470,15 @@
         // Load a random word when page loads
         document.addEventListener('DOMContentLoaded', loadRandomWord);
     </script>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KZJCX52LD5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KZJCX52LD5');
+</script>
+    
 </body>
 </html>
